--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-chat-ui": "^0.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-markdown": "^8.0.7",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
